Palindrome Number (3 solutions)